public/globals.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');

/* CSS Reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Prevent body overflow */
html, body {
  width: 100%;
  height: 100%;
  overflow-x: hidden; /* Prevent horizontal overflow */
  margin: 0;
  padding: 0;
  font-family: 'Quicksand', sans-serif;
}

/* Body styling */
body {
  background-image: url('/background.jpg');
  background-size: cover;
  background-attachment: fixed;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  overflow-x: hidden; /* Prevent horizontal overflow */
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 20px;
  position: relative;
  z-index: 1;
}

h3 {
  margin: 0;
  color: #fff;
  font-size: 1.2rem;
  line-height: 1.2;
  font-weight: 500;
  font-family: 'Quicksand', sans-serif;
  margin: 40px 0 0 30px;  /* Add margin to the top and left */
  backdrop-filter: blur(5px);
  border-radius: 15px;
}

nav {
  background: rgba(0, 0, 0, 0.2); /* Opaque 20% */
  color: white;
  padding: 1em;
  display: flex;
  justify-content: center; /* Center the navbar horizontally */
  border-radius: 15px; /* Rounded edges */
  margin: 20px auto; 
  width: fit-content;
  backdrop-filter: blur(5px); /* Create some kind of blurred effect to make it better readable */
}

nav a {
  margin: 0 1em;
  color: white;
  text-decoration: none;
  position: relative;
  padding: 5px 5px; /* Consistent padding */
  display: inline-block;
}

nav a::before {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 0;
  height: 0;
  background: rgba(255, 255, 255, 0.15);
  transition: width 0.3s, height 0.3s, top 0.3s, left 0.3s;
  z-index: -1;
}

nav a:hover::before {
  width: calc(100% + 15px);
  height: calc(100% + 15px);
  top: -7.5px;
  left: -7.5px;
  border-radius: 20px; /* Rounded edges for highlight */
}

.content {
  color: white;
  flex: 1; /* Ensures the content takes up the remaining space */
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%; /* Ensure the content takes the full width */
  box-sizing: border-box;
  max-width: 100%; /* Ensure max width does not exceed viewport */
  overflow-x: hidden; /* Prevent horizontal overflow */
}

.content-box {
  padding: 15px;
  margin: -5px auto;
  border-radius: 15px;
  width: 100%; /* Ensure the content box takes full width */
  max-width: 100%; /* Ensure max width does not exceed viewport */
  backdrop-filter: blur(5px); /* Makes the navbar opaque */
  box-sizing: border-box;
  z-index: 2; /* Ensure content box is above background */
}

.content h2, .content h4, .content h5, .content h6 {
  font-family: 'Quicksand', sans-serif;
  color: #fff;
  margin-top: 0.4em;
  margin-bottom: 0.5em;
}

.content h1 {
  font-family: 'Quicksand', sans-serif;
  color: #fff;
}

.content h3 {
  font-family: 'Quicksand', sans-serif;
  color: #fff;
  margin-top: 0.4em;
  margin-left: -0.0em;
  margin-bottom: -0.2em;
}

.content p {
  font-family: 'Quicksand', sans-serif;
  color: #fff;
  line-height: 1.6;
  margin-bottom: 1em;
}

.content a {
  color: rgb(170, 207, 255);
  text-decoration: none;
  border-bottom: 1.25px dotted rgb(170, 207, 255);
}

.content a:hover {
  text-decoration: underline;
}

.content ul, .content ol {
  margin: 1em 0;
  padding-left: 1.5em;
}

.content ul li, .content ol li {
  margin-bottom: 0.5em;
}

.content table {
  width: auto;
  border-collapse: collapse;
  margin: 1em 0;
}

.content th, .content td {
  padding: 0.75em;
  border: 1px solid #ddd;
  text-align: left;
}

.content th {
  background-color: rgba(255, 255, 255, 0.15);;
}

.content hr {
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1.5em 0;
}

.content blockquote {
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  border-left: 5px solid #eee;
  color: #666;
}

/* Floating image styling */
.content-box img {
  float: left;
  margin: 0 20px 20px 0; /* Adjust margin as needed */
  max-width: 200px; /* Adjust the size as needed */
  width: 100%; /* Ensure the image is responsive */
  height: auto;
  border-radius: 8px; /* Optional: adds rounded corners to the image */
}

/* Inline code styling */
.content-box code {
  font-family: 'Courier New', Courier, monospace;
  background-color: rgba(0, 0, 0, 0.25); /* Light grey background */
  color: #fff; /* Dark red color for the code */
  padding: 0.3em 0.5em;
  border-radius: 10px;
  white-space: pre-wrap; /* Ensures long lines break to fit within the box */
  max-width: 100%;
  overflow-x: auto; /* Enables horizontal scrolling if needed */
}

/* Block code styling */
.content-box pre {
  background-color: rgba(0, 0, 0, 0.25); /* Opaque 50% */
  padding: 0.5em;
  overflow: auto; /* Enables scrolling */
  border-radius: 10px;
  font-family: 'Courier New', Courier, monospace;
  margin: 15px;
  min-width: 50%;
  width: fit-content;
  white-space: pre; /* Preserves whitespace and line breaks */
  overflow-x: auto; /* Enables horizontal scrolling */
}

footer {
  color: white;
  text-align: center;
  padding: 1em;
  border-radius: 15px;
  margin: 20px auto;
  width: fit-content;
  z-index: 1; /* Ensure footer is above background */
}

/* Blog, TIL, and Advisory List Styles */
.blog-list, .til-list, .advisory-list {
  list-style-type: none;
  padding: 0;
}

.blog-list li, .til-list li, .advisory-list li {
  margin-bottom: 1em;
}

.blog-list a, .til-list a, .advisory-list a {
  font-size: 1.1em;
  color: #fff;
  text-decoration: none;
}

.blog-list a:hover, .til-list a:hover, .advisory-list a:hover {
  text-decoration: underline;
}

/* Responsive Design */
@media (max-width: 768px) {
  header {
    justify-content: center;
  }

  h3 {
    margin: 10px 0 0 10px; /* Adjust margin for smaller screens */
  }

  .content {
    margin: 0;
    align-items: center;
  }

  nav {
    width: 100%;
    margin: 10px auto;
  }

  .content-box {
    width: 95%; /* Increase width on smaller screens for better fit */
    padding: 10px;
    margin: 0; /* Ensure margin for better spacing */
  }

   /* Floating image styling */
   .content-box img {
    float: none; /* Remove float */
    display: block; /* Make the image a block element */
    margin: 0 auto 20px; /* Center the image and add bottom margin */
    width: 100%; /* Make the image take the full width */
    max-width: 100%; /* Ensure the image does not exceed the container width */
  }
}

